Bug 441592 - Crash on deleting first storyboard entry.
Summary: Crash on deleting first storyboard entry.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Storyboard (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2021-08-27 00:28 UTC by Eoin O'Neill
Modified: 2021-09-13 00:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2021-08-27 00:28:04 UTC
SUMMARY
Deleting first storyboard entry causes a crash.

EXPECTED RESULT
Shouldn't crash.
Comment 1 Eoin O'Neill 2021-08-30 18:48:48 UTC
Git commit f554fdb9c2f531d1688c16b2aceb1e5fc749080a by Eoin O'Neill.
Committed on 30/08/2021 at 18:46.
Pushed by eoinoneill into branch 'master'.

Fix a crash in storyboard docker when removing boards.

First frame removal would cause a crash due to improper value being fetched.
(Specifically, we aren't interested in the last keyframe of a storyboard
entry, but the last visible frame of the board.)

M  +41   -40   plugins/dockers/storyboarddocker/StoryboardModel.cpp

https://invent.kde.org/graphics/krita/commit/f554fdb9c2f531d1688c16b2aceb1e5fc749080a
Comment 2 Halla Rempt 2021-09-01 09:17:42 UTC
Git commit 876598b3f7dc9929f29531063a67cae318d67875 by Halla Rempt, on behalf of Eoin O'Neill.
Committed on 01/09/2021 at 09:16.
Pushed by rempt into branch 'krita/5.0'.

Fix a crash in storyboard docker when removing boards.

First frame removal would cause a crash due to improper value being fetched.
(Specifically, we aren't interested in the last keyframe of a storyboard
entry, but the last visible frame of the board.)
(cherry picked from commit f554fdb9c2f531d1688c16b2aceb1e5fc749080a)

M  +41   -40   plugins/dockers/storyboarddocker/StoryboardModel.cpp

https://invent.kde.org/graphics/krita/commit/876598b3f7dc9929f29531063a67cae318d67875