Fix a crash in storyboard docker when removing boards.

First frame removal would cause a crash due to improper value being fetched.
(Specifically, we aren't interested in the last keyframe of a storyboard
entry, but the last visible frame of the board.)

BUG:441592
(cherry picked from commit f554fdb9c2f531d1688c16b2aceb1e5fc749080a)